# LLM

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
model/: api_token.yml  main.py
