[tool.poetry]
name = "llm"
version = "0.1.1"
description = "Interface between the frontend, DMAS and a Large Language Model"
authors = ["CJ Donoghue <cjd552@york.ac.uk>", "Marks Polakovs <marks.polakovs@york.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
llama-cpp-python = "^0.2.64"
fastapi = {extras = ["standard"], version = "^0.110.2"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
openai = "^1.28.1"
transformers = "^4.40.2"
torch = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
